# ADRC-data-receiver

./: .gitignore  CMakeLists.txt  README.md  WzSerialPort.cpp  configure.cpp  configure.h  main.cpp  receiver.cpp  receiver.h  ref_sender.cpp  ref_sender.h  sender.cpp  sender.h  timercpp.h
data/: 01Vdelay1s.csv  2020-11-11-16-0.csv  2020-11-11-16-8.csv  2020-11-11-19-44.csv  2020-11-11-20-2.csv  2020-11-11-20-23.csv  2020-11-11-20-3.csv  2020-11-11-20-4.csv  2020-11-11-20-43.csv  2020-11-11-20-58.csv  2020-11-11-21-16.csv  2020-11-11-21-20.csv  2020-11-11-21-8.csv  2020-11-13-11-10.csv  2020-11-13-11-24.csv  2020-11-13-11-32.csv  2020-11-13-11-36.csv  2020-11-13-11-56.csv  2020-11-13-11-58.csv  2020-11-13-12-0.csv  2020-11-13-12-11.csv  2020-11-13-12-3.csv  2020-11-13-12-6.csv  2020-11-13-20-11.csv  2020-11-13-20-24.csv  2020-11-13-20-34.csv  2020-11-13-20-35.csv  2020-11-13-20-54.csv  2020-11-13-20-7.csv  2020-11-29-20-11.csv  2020-11-29-20-33.csv  2020-11-29-20-41.csv  2020-11-29-20-42.csv  2020-11-29-20-47.csv  2020-11-29-20-50.csv  2020-12-1-21-0.csv  2020-12-1-21-10.csv  2020-12-1-21-15.csv  2020-12-1-21-33.csv  2020-12-1-21-35.csv  (+41 more)
